2000-09-06  Philip Blundell  <philb@gnu.org>

	* config.bfd (arm*-*-uclinux*): New target.
	(armeb-*-elf, arm*b-*-linux-gnu*): Likewise.

2000-08-22  Doug Kwan <dkwan@transmeta.com>

	* coff-w65.c (CREATE_LITTLE_COFF_TARGET): Fix typo.
	* coffcode.h (coff_set_flags): Add detection of w65 architecture.

2000-04-14  Matthew Green  <mrg@cygnus.com>
	
	* config.bfd: Add NetBSD/sparc64 support.

2000-05-31  Mark Kettenis  <kettenis@gnu.org>

        Add support for FreeBSD/Alpha.
        * configure.in: Add alpha*-*-freebsd* entry to prevent including
        OSF core file support.
	* configure: Regenerate.

2000-05-29  Philip Blundell  <philb@gnu.org>

	* ppcboot.c: Add packed attribute if compiling with GCC.

2000-05-29  Anatoly Vorobey  <mellon@pobox.com>

	* elf.c (_bfd_elf_link_hash_table_init): Initialize dynlocal.

2000-05-26  Alan Modra  <alan@linuxcare.com.au>

	* sysdep.h (gettext, dgettext, dcgettext, textdomain,
	bindtextdomain): Replace defines with those from intl/libgettext.h
	to quieten gcc warnings.

2000-05-26  Eli Zaretskii  <eliz@is.elta.co.il>

	* aoutx.h (find_nearest_line): Use IS_ABSOLUTE_PATH.

	* archive.c (normalize, bfd_bsd_truncate_arname,
	bfd_gnu_truncate_arname) [HAVE_DOS_BASED_FILE_SYSTEM]: Support
	file names with backslashes.

	* cache.c (bfd_open_file) [__MSDOS__]: Don't unlink the file
	before opening it.

	* sysdep.h: Include filenames.h.

2000-05-26  Alan Modra  <alan@linuxcare.com.au>

	* opncls.c (bfd_close_all_done): Mask file perms with 0777 not 0x777.

2000-05-23  Philip Blundell  <pb@futuretv.com>

	* configure.in: Set version to 2.10.
	* configure: Regenerate.

Sat Jul  3 10:35:19 CDT 1999 Joel Sherrill <joel@OARcorp.com>

	* config.bfd (sparc-rtemself): Added.
	(sparc-rtemsaout): Added as alternate name for current sparc-rtems.
	(sparc-rtems): Switched to ELF from a.out
	(i386-rtemscoff): Added as alternate name for current i386-rtems.
	(i386-rtems): Switched to ELF.

2000-05-09  Alan Modra  <alan@linuxcare.com.au>
